--- a/courses/calc 1/styles.css
+++ b/courses/calc 1/styles.css
@@ -170,6 +170,7 @@ p {
 /* The container for your homework entries */
 .homework-box1 {
   background: rgba(255, 255, 255, 0.95);
+  opacity: 0.8;
   border-radius: 20px;
   width: 100%;
   /* height: 100px; - removed */
@@ -181,10 +182,14 @@ p {
   align-items: flex-start;
   gap: 1em;
   cursor: default;
-  max-height: 300px;      
+  max-height: 350px;      
   overflow-y: auto;       
   overflow-x: auto;
 
+}
+
+.homework-box1:hover {
+opacity: 1;
 }
 
 .homework-content {
